<resources>
    <string name="app_name">Krishi Upay</string>
    <string name="language">Choose Language</string>
    <string name="about">About us</string>
    <string name="weather">Weather</string>
    <string name="news">News</string>
    <string name="support">Support</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="videos">Videos</string>
    <string name="equip">Machine</string>
    <string name="wheat">Wheat Farming</string>
    <string name="paddy">Paddy Farming</string>
    <string name="organic">Organic Farming</string>
    <string name="jago">Jagoo Kisan</string>
    <string name="mausam">Mausam Khabar</string>
    <string name="schemes">SCHEMES</string>
    <string name="shop">SHOP</string>
    <string name="fertiliser">FERTILIZERS</string>
    <string name="help">HELP</string>
    <string name="online">ONLINE STORE</string>
    <string name="equipment">Agricultural Equipment</string>
    <string name="seed">Agricultural Seeds</string>
    <string name="govt">GOVERNMENT SCHEMES</string>
    <string name="bank">BANKING FACILITY</string>
    <string name="pm">Prime Minister Rozgar Yojna</string>
    <string name="welfare">Farmers Welfare Schemes</string>
    <string name="vikas">Rashtriya Krishi Vikas Yojna</string>
    <string name="subsidy">Subsidy on Hybrid Seeds</string>
    <string name="fasal">Pradhan Mantri Fasal Bima Yojna</string>
    <string name="krishi">Pradhan Mantri Krishi Yojna</string>
    <string name="atma">Atma Scheme</string>
    <string name="agmarknet">AGMARKNET</string>
    <string name="category">Please select your category</string>
    <string name="aboutUS">ABOUT US</string>
    <string name="logout">Logout</string>
    <string name="app_developed">This app is developed by:-</string>
    <string name="submit">SUBMIT</string>
    <string-array name="entry">
        <item>Select your category</item>
        <item>Fertilizers</item>
        <item>Insecticides</item>
    </string-array>
    <string name="Maize">
        "\n"M A I Z E"\n"


"\n"I N S E C T     P E S T S:- "\n\n"


"\n"B O R E R


"\n"Symptoms:- The maggot feeds on the young growing shoots results in “dead hearts”"\n"

Management:- Use seeds pelleted with insecticides (see sorghum). Seed treatment with imidacloprid 70 WS 10 g/kg of seeds

"\n""\n"S T E M   B O R E R"\n"

"\n"Symptoms:- Central shoot withers and leading to “dead heart”. Larvae mines the midrib enter the stem and feeds on the internal tissues

"\n"Management:- Mix any of the following granular insecticides with sand to make up a total quantity of 50 kg and apply in the leaf whorls on the 20th
day of sowing.

"\n\n"D I S E A S E S:-  "\n"

"\n"A n t h r a c n o s e"\n"

"\n"Symptoms:- Anthracnose symptoms vary widely depending on numerous factors such as genotype, age of plant and environmental conditions; lesions develop a tan center and red-brown or orange border

"\n"Management:- Plant hybrids resistant to anthracnose; rotating crops and plowing crop debris into soil may help reduce incidence of early season infections.

        "\n""\n"C H A R C O L   R O T"\n"

Symptoms:- Symptoms are usually first apparent at the tasseling stage; plant stalks become shredded and pith is completely rotted with stringy strands of vascular tissue left intact

"\n"Management:- There are currently no available fungicides to treat the disease; avoid stressing plants by practicing good water management;

</string>
    <string name="Mustard">

       "\n" M U S T  A R D"\n"
        "\n" U S E S:- "\n"
The leaves and shoots of the mustard plant are consumed as a vegetable in some countries. Mustard seed is incorporated into seasonings and dressings. Mustard may be grown as a cover crop in rotation with other vegetables.

       "\n" "\n"D I S E A S E S:- "\n"

"\n"A L T E R N A R I A     L E A F      S P O T"\n"

        "\n"Symptoms:- Small dark spots on leaves which turn brown to gray; lesions may be round or angular and may possess a purple-black margin.

        "\n"Management:- Plant only pathogen-free seed; rotate crops; applications of appropriate fungicides control disease when present

        "\n""\n"C L U B R O O T"\n"

        "\n"Symptoms:- Slow growing, stunted plants; yellowish leaves which wilt during day and rejuvenate in part at night.

        "\n"Management:- Once the pathogen is present in the soil it can survive for many years, elimination of the pathogen is economically unfeasible.

        "\n""\n"I N S E C T   P E S T S:-"\n"

"\n"F L E A   B E E T L E"\n"

        "\n"Symptoms:- Small holes or pits in leaves that give the foliage a characteristic “shothole” appearance; young plants and seedlings are particularly susceptible; plant growth may be reduced.

        "\n"Management:- In areas where flea beetles are a problem, floating row covers may have to be used prior to the emergence of the beetles to provide a physical barrier to protect young plants.


    </string>
    <string name="Oats">
        "\n"O A T S"\n"

"\n"U S E S :- Oats can be rolled or crushed to produce oatmeal or ground to produce oat flour. Oats may also be used in the production of several baked goods such as oat cakes or oat bread. The vast majority of commercially grown oats are used as livestock feed.

        "\n""\n"I N S E C T    P E S T S:-"\n"

"\n"W I R E  W O R M S"\n"

"\n"SYMPTOMS:- Death of seedlings; reduced stand; girdled stems and white heads; wireworm larvae can be found in soil when dug round the stem; larvae are yellow-brown, thin worms with shiny skin"\n"
"\n"SOLUTIONS:- Chemical control impossible in a standing crop, must be applied at preplanting or as a seed treatment; if wireworms are known to be present in soil fallow field during summer and till frequently to reduce numbers.

        "\n""\n"S T I N K B U G S"\n"

        "\n"SYMPTOMS:- Damage to head during milk or soft dough stage; stink bugs often carry pathogens in their mouthparts which can cause secondary infections.

        "\n"SOLUTIONS:-  Remove weeds around crop which may act as overwintering sites for stink bugs and practice good weed management throughout the year.


        "\n""\n"D IS E A S E S:- "\n"

        "\n"A N T H R  A C N O S E"\n"

        "\n"SYMPTOMS:- Red to brown oval lesions on the leaves; black fungal structures may visible on lesions; crowns become bleached and then turn brown; plants are more susceptible to lodging

        "\n"SOLUTIONS:- Provide plants with adequate levels of fertilizer; rotate crops to improve soil quality; control weeds in field;


        "\n""\n"C R O W N  R U S T"\n"

        "\n"SYMPTOMS:- Chlorotic flecks or brown necrotic spots on leaves or stems; yellow streaks or patches on foliage;

        "\n"SOLUTIONS:- The most effective method of controlling rusts is to plant resistant varieties of oats; planting oats early allows them to mature before spores reach plants and escape most damage

</string>
    <string name="Rice">
        "\n"RICE"\n"
        "\n"I N S E C T    P E S T S:- "\n"


        "\n"L E A F H O P P E R S"\n"


        "\n"SYMPTOMS:- Plants may show no symptoms of leafhopper of planthopper damage; insects transmit many rice viruses

        "\n"MANAGEMENT:- Rotating crop for a period of one year is an effective and economical method of controlling hopper numbers

        "\n\n"M O L E    C R I C K E T"\n"


        "\n"SYMPTOMS:-  The insect is very destructive because it feeds on seeds, tillers of mature plants and roots.

        "\n"MANAGEMENT:- Use resistant varieties. Level the field properly and irrigate every 3-4 days after planting. Collect and kill the insects during land preparation.



        "\n\n"D I S E A S E S:- "\n"


        "\n"B A C T E R I A L     L E A F     S T R E A K"\n"


        "\n"SYMPTOMS:-Small, water-soaked streaks between leaf veins which are initially dark green and then turn translucent; streaks grow larger, coalesce and turn light brown in color

        "\n"MANAGEMENT:- Control of bacterial leaf streak is dependent on the use of resistant rice varieties and on planting of treated seed

        "\n""\n"L E A F    S C A L D"\n\n"
        "\n"SYMPTOMS:- As name suggest we will see scalded appearance on leaves. The lesion is marked with different zone from alternating light tan and dark brown from leaf tips or edges.

        "\n"MANAGEMENT:- Grow resistant varieties. Treat the seeds with suitable fungicide.

</string>
    <string name="Sugarcane">
        "\n"S U G A R C A N E"\n"

        "\n"S E E D I N G:-"\n"


        "\n"W H I T E  G R U B   L A R V A"\n"

"\n"SYMPTOMS:- Yellowing and wilting of leaves

"\n"SOLUTIONS:- Remove stubble and debris of previous crops. Expose diapausing stages.


       "\n""\n" T E R M I T E"\n"

"\n"SYMPTOMS:- Entire shoot dries up.

"\n"SOLUTIONS:- Dig the termite area and destroy the queen termite Growth

    "\n""\n"    E A R L Y   S H O O T   B O R E R"\n"

"\n"SYMPTOMS:- A number of bore holes at the base of shoot just above ground level.

"\n"SOLUTIONS:- Deep summer ploughing,inter culture and hand weeding. grow onion/garlic/coriander as inter crop.


</string>
    <string name="Wheat">
        "\n"W H E A T"\n"


        "\n"I N S E C T    P E S T:-"\n""\n"
"\n"T E R M I T E    E G G"\n"

"\n"SYMPTOMS:- Non Damaging/Inactive state

"\n"SOLUTIONS:- Apply well rotten farm yard manure. Expose the eggs to sunshine. Avoid late sowing ."\n"

"\n"T E R M I T E    L A R V A"\n"

"\n"SYMPTOMS:- They feed onroots and plants die.The plants damaged to later stages give rise to white ears.

"\n"SOLUTIONS:- Use crude oil to destroy the termite colony.

"\n"D I S E A S E S:- "\n""\n"

"\n"F O L I A R    B L I G H T"\n"

"\n"SYMPTOMS:- Infection is first evident small,oval,discoloured lesions irregularly scattered on the leaves.

"\n"SOLUTIONS:- Grow resistant varieties recommended to specific areas. Timely sowing is also good.

"\n"W E E D S"\n"

"\n"SYMPTOMS:-  Competes with the main crop for space,sunlight,water,nutrition and growth.

"\n"SOLUTIONS:- Keep the nursery beds weed free by hand weeding.

</string>
    <string name="kharif">KHARIF CROPS</string>
    <string name="rabi">RABI CROPS</string>
    <string name="crops">CROPS</string>
    <string name="oatsname">OATS</string>
    <string name="wheatname">WHEAT</string>
    <string name="mustardname">MUSTARD</string>
    <string name="ricename">RICE</string>
    <string name="sugarcanename">SUGARCANE</string>
    <string name="maizename">MAIZE</string>
    <string name="fetch">FETCH</string>
    <string name="welcome">WELCOME</string>
</resources>