<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/language"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/language" />
        <item
            android:id="@+id/weather"
            android:icon="@drawable/ic_cloud_black_24dp"
            android:title="@string/weather" />
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_mail_black_24dp"
            android:title="@string/news" />

    </group>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/exit"
                android:title="@string/logout" />

            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />

        </menu>
    </item>

</menu>
