<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".govtscheme">

    <TextView
        android:id="@+id/tvschemes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/schemes"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:text="@string/pm"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnfw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:text="@string/welfare"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnrkvy"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round"
            android:text="@string/vikas"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnsh"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:text="@string/subsidy"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnpmf"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:text="@string/fasal"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnpmk"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/round"
            android:text="@string/krishi"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btna"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:text="@string/atma"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnagm"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:text="@string/agmarknet"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>