<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Rabiclick">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="262dp"
        android:layout_height="86dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="64dp"
        android:gravity="center_horizontal"
        android:text="@string/rabi"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/btnWheat"
        android:layout_width="165dp"
        android:layout_height="104dp"
        app:srcCompat="@drawable/wheat2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/wheatname"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btnOats"
        android:layout_width="156dp"
        android:layout_height="167dp"
        app:srcCompat="@drawable/oats" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/oatsname"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btnMustard"
        android:layout_width="156dp"
        android:layout_height="140dp"
        app:srcCompat="@drawable/mustard" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/mustardname"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>