<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".Kharifclick">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="64dp"
        android:gravity="center_horizontal"
        android:text="@string/kharif"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="120dp"
        app:autoSizeMinTextSize="80dp" />

    <ImageButton
        android:id="@+id/btnRice"
        android:layout_width="148dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg"
        app:srcCompat="@drawable/rice" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/ricename"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btnSu"
        android:layout_width="156dp"
        android:layout_height="121dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/sugarcan" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/sugarcanename"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btnMaize"
        android:layout_width="156dp"
        android:layout_height="122dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/maize" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/maizename"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>